Update Surefire plugin to 2.22.0