@@ -197,9 +197,6 @@
 
         <!-- Checkstyle -->
         <air.checkstyle.config-file>checkstyle/airbase-checks.xml</air.checkstyle.config-file>
-
-        <!-- default property to empty -->
-        <java9-surefire-argline />
     </properties>
 
     <build>
@@ -377,7 +374,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.20.1</version>
+                    <version>2.22.0</version>
                     <configuration>
                         <systemPropertyVariables>
                             <sun.jnu.encoding>${project.build.sourceEncoding}</sun.jnu.encoding>
@@ -390,7 +387,6 @@
                         <threadCount>${air.test.thread-count}</threadCount>
                         <argLine>
                             ${argLine}
-                            ${java9-surefire-argline}
                             -Dfile.encoding=${project.build.sourceEncoding}
                             -Xmx${air.test.jvmsize}
                             -Xms${air.test.jvmsize}
@@ -1368,16 +1364,6 @@
                     </plugin>
                 </plugins>
             </build>
-        </profile>
-
-        <profile>
-            <id>java9-surefire</id>
-            <activation>
-                <jdk>[1.9,)</jdk>
-            </activation>
-            <properties>
-                <java9-surefire-argline>--add-modules java.base</java9-surefire-argline>
-            </properties>
         </profile>
 
         <!-- ======================================================================== -->
